2017-10-06  Richard Biener  <rguenther@suse.de>

PR tree-optimization/82397
	* tree-vect-data-refs.c (dr_group_sort_cmp): Do not use
	operand_equal_p but rely on data_ref_compare_tree for detecting
	equalities.
	(vect_analyze_data_ref_accesses): Use data_ref_compare_tree
	to match up with dr_group_sort_cmp.

	* gfortran.dg/pr82397.f: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@253482 138bc75d-0d04-0410-961f-82ee72b054a4